data/negatives/20200707N/torvalds.linux.0fd64291031d3587753b8adc53123b277855c777
commit 0fd64291031d3587753b8adc53123b277855c777
Author: Nicolas Iooss <nicolas.iooss_linux@m4x.org>
Date:   Sat Aug 1 21:55:38 2015 +0800

    drm/amdgpu: increment queue when iterating on this variable.
    
    gfx_v7_0_print_status contains a for loop on variable queue which does
    not update this variable between each iteration.  This is bug is
    reported by clang while building allmodconfig LLVMLinux on x86_64:
    
        drivers/gpu/drm/amd/amdgpu/gfx_v7_0.c:5126:19: error: variable
        'queue' used in loop condition not modified in loop body
        [-Werror,-Wloop-analysis]
                    for (queue = 0; queue < 8; i++) {
                                    ^~~~~
    
    Fix this by incrementing variable queue instead of i in this loop.
    
    Signed-off-by: Nicolas Iooss <nicolas.iooss_linux@m4x.org>
    Signed-off-by: Alex Deucher <alexander.deucher@amd.com>

diff --git a/drivers/gpu/drm/amd/amdgpu/gfx_v7_0.c b/drivers/gpu/drm/amd/amdgpu/gfx_v7_0.c
index 2db6ab0a543d..5c03420ca5dc 100644
--- a/drivers/gpu/drm/amd/amdgpu/gfx_v7_0.c
+++ b/drivers/gpu/drm/amd/amdgpu/gfx_v7_0.c
@@ -5122,7 +5122,7 @@ static void gfx_v7_0_print_status(void *handle)
 		dev_info(adev->dev, "  CP_HPD_EOP_CONTROL=0x%08X\n",
 			 RREG32(mmCP_HPD_EOP_CONTROL));
 
-		for (queue = 0; queue < 8; i++) {
+		for (queue = 0; queue < 8; queue++) {
 			cik_srbm_select(adev, me, pipe, queue, 0);
 			dev_info(adev->dev, "  queue: %d\n", queue);
 			dev_info(adev->dev, "  CP_PQ_WPTR_POLL_CNTL=0x%08X\n",

